--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body data-scroll-container>
     <div class="grid-lines"></div>
     <div class="noise"></div>
     <div class="color-overlay"></div>
 
-    <button class="menu-toggle">
+    <button class="menu-toggle" aria-label="Toggle Menu">
         <div class="menu-toggle__lines">
             <span></span>
             <span></span>
@@ -49,7 +50,7 @@
     </nav>
 
     <main data-scroll>
-        <section id="home" class="hero" data-scroll-section>
+        <section id="home" class="hero section active" data-scroll-section>
             <canvas id="hero-canvas"></canvas>
             <div class="hero-content">
                 <h1 class="hero-title">
@@ -75,7 +76,7 @@
             </div>
         </section>
 
-        <section id="work" class="globe-section" data-scroll-section>
+        <section id="work" class="globe-section section" data-scroll-section>
             <div class="section-header">
                 <h2 class="section-title" data-scroll data-scroll-speed="1">GLOBAL PRESENCE</h2>
                 <div class="section-number">01</div>
@@ -228,7 +229,7 @@
                 </div>
             </div>
         </section>
-        <section id="about" class="about" data-scroll-section>
+        <section id="about" class="about section" data-scroll-section>
             <div class="section-header">
                 <h2 class="section-title" data-scroll data-scroll-speed="1">ABOUT ME</h2>
                 <div class="section-number">02</div>
@@ -271,7 +272,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="contact" data-scroll-section>
+        <section id="contact" class="contact section" data-scroll-section>
             <div class="section-header">
                 <h2 class="section-title" data-scroll data-scroll-speed="1">GET IN TOUCH</h2>
                 <div class="section-number">03</div>
@@ -323,7 +324,9 @@
         <div class="section-indicator" data-index="3"></div>
     </div>
 
+    <!-- Scripts -->
     <script src="script.js"></script>
+    <script src="mobile.js"></script>
 </body>
 </html>
 
