--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                         <div class="btn-overlay"></div>
                     </button>
                     <div class="thank-you-message" style="display: none;">
-                        <h4>Thank you for your message!</h4>
-                        <p>I'll get back to you as soon as possible.</p>
+                        <h4>Message Sent Successfully!</h4>
+                        <p>Thank you for reaching out. I appreciate your interest and will respond to your message as soon as possible.</p>
                     </div>
                 </form>
             </div>
