--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
             <div class="nav-footer">
                 <div class="social-links">
-                    <a href="https://github.com/uvvs/">GitHub</a>
+                    <a href="https://github.com/ttkm/">GitHub</a>
                 </div>
             </div>
         </div>
