--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>TTKM.NET | Creative Web Developer & Full-Stack Engineer</title>
     <meta name="description" content="TTKM.NET - Specialized in creating immersive digital experiences with React, Three.js, WebGL, Node.js and modern web technologies. Available for freelance projects.">
@@ -42,7 +42,6 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="css/section-indicators.css">
     <link rel="stylesheet" href="css/captcha.css">
     
