Github link changed

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                             <span class="link-label">Email</span>
                             <span class="link-text">dev@ttkm.net</span>
                         </a>
-                        <a href="https://github.com/uvvs/" class="contact-link" data-magnetic itemprop="sameAs" rel="noopener">
+                        <a href="https://github.com/ttkm/" class="contact-link" data-magnetic itemprop="sameAs" rel="noopener">
                             <span class="link-label">GitHub</span>
-                            <span class="link-text">@uvvs</span>
+                            <span class="link-text">@ttkm</span>
                         </a>
                     </div>
                 </div>
